<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        style="@style/Panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#2A2737" />

        <LinearLayout
            android:id="@+id/panel_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/chat_ext_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/panel_content_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_3"
                android:layout_marginRight="@dimen/dp_3"
                android:layout_marginBottom="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/media_heigth"
                        android:layout_height="@dimen/media_heigth"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_pictures" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/picture"
                        android:textColor="#8e8e8e"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/media_heigth"
                        android:layout_height="@dimen/media_heigth"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_takephoto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/site"
                        android:textColor="#8e8e8e"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/media_heigth"
                        android:layout_height="@dimen/media_heigth"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_video" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/video"
                        android:textColor="#8e8e8e"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/media_heigth"
                        android:layout_height="@dimen/media_heigth"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/location"
                        android:textColor="#8e8e8e"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel_content_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_3"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_3"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/hongbao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/media_heigth"
                        android:layout_height="@dimen/media_heigth"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_hongbao" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/hongbao"
                        android:textColor="#8e8e8e"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ic_voicechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/media_heigth"
                        android:layout_height="@dimen/media_heigth"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_voicechat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/voicechat"
                        android:textColor="#8e8e8e"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ic_videochat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/media_heigth"
                        android:layout_height="@dimen/media_heigth"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_videochat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/videochat"
                        android:textColor="#8e8e8e"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ic_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/media_heigth"
                        android:layout_height="@dimen/media_heigth"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_user" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/usercard"
                        android:textColor="#8e8e8e"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>